--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.premiumcalculator"
+        applicationId "com.pg.premiumcalculator"
         minSdkVersion 15
         targetSdkVersion 29
         versionCode 1
