--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".taxilessthan6_breakup"></activity>
+        <activity android:name=".gcv3wheeler_breakup"></activity>
+        <activity android:name=".gcv3wheeler" />
+        <activity android:name=".taxilessthan6_breakup" />
         <activity android:name=".private_car_breakup" />
 
         <provider
