Added Commission Layout for all + minor bug fixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".misc_breakup"></activity>
+        <activity android:name=".commission"></activity>
+        <activity android:name=".misc_breakup" />
         <activity android:name=".misc" />
         <activity android:name=".schoolbus_breakup" />
         <activity android:name=".schoolbus" />
