--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".commission"></activity>
+        <activity android:name=".splash_activity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".about" />
+        <activity android:name=".view_profile" />
+        <activity android:name=".register"/>
+        <activity android:name=".login" />
+        <activity android:name=".commission" />
         <activity android:name=".misc_breakup" />
         <activity android:name=".misc" />
         <activity android:name=".schoolbus_breakup" />
@@ -43,13 +54,7 @@
         <activity android:name=".taxilessthan6" />
         <activity android:name=".private_car" />
         <activity android:name=".two_wheeler" />
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
